Adding automatic generation of scientific references per year and topic and a How to on how to add citations and how it works. All in ReadTheDocs.

--- a/doc/citations/2022.tex
+++ b/doc/citations/2022.tex
@@ -39,10 +39,10 @@ Bumblebee \url{https://ui.adsabs.harvard.edu/}}
 2022ApJ...933..100B,%Baehr+ "Direct Formation of Planetary Embryos in Self-Gravitating Disks"
 2022AGUFMSH14B..03S,%Stejko+ "Using Time-Distance Helioseismology to Constrain Simulations of Meridional Circulation on the Sun"
 2022ApJ...934..161S,%Stejko+ "Constraining Global Solar Models through Helioseismic Analysis"
-2022NatAs.tmp...76C,%Currie+ "Images of embedded Jovian planet formation at a wide separation around AB Aurigae"
+2022NatAs...6..751C,%Currie+ "Images of embedded Jovian planet formation at a wide separation around AB Aurigae"
 2022JCAP...04..019R,%Roper Pol+ "Polarization of gravitational waves from helical MHD turbulent sources"
 2022ApJ...929..127M,%Mtchedlidze+ "Evolution of primordial magnetic fields during large-scale structure formation"
-2022arXiv220400633C,%Currie+ "Images of Embedded Jovian Planet Formation At A Wide Separation Around AB Aurigae"
+2022NatAs...6..751C,%Currie+ "Images of Embedded Jovian Planet Formation At A Wide Separation Around AB Aurigae"
 2022RSPTA.38010086B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
 2022JFM...934A..37H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
 2022MNRAS.511..732B,%Becerra+ "Evolution of random initial magnetic fields in stably stratified and barotropic stars"
@@ -52,7 +52,7 @@ Bumblebee \url{https://ui.adsabs.harvard.edu/}}
 2022ApJ...931L..17K,%Kapyla+ "Solar-like dynamos and rotational scaling of cycles from star-in-a-box simulations"
 2022MNRAS.509.3218K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of interstellar medium gas density and gas turbulence"
 2022MNRAS.509.2249B,%Bhat+ "Saturation of large-scale dynamo in anisotropically forced turbulence"
-2022arXiv220105630R,%Roper Pol+ "The gravitational wave signal from primordial magnetic fields in the Pulsar Timing Array frequency band"
+2022PhRvD.105l3502R,%Roper Pol+ "The gravitational wave signal from primordial magnetic fields in the Pulsar Timing Array frequency band"
 2022MNRAS.509.3660M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas I. Numerical simulation of the nearly Jeans-unstable case"
 Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolved carbon particle"
 }
