--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -275,10 +275,10 @@ In \textit{addition}, 137 papers reference it for code comparison or other purpo
 2022ApJ...933..100B,%Baehr+ "Direct Formation of Planetary Embryos in Self-Gravitating Disks"
 2022AGUFMSH14B..03S,%Stejko+ "Using Time-Distance Helioseismology to Constrain Simulations of Meridional Circulation on the Sun"
 2022ApJ...934..161S,%Stejko+ "Constraining Global Solar Models through Helioseismic Analysis"
-2022NatAs.tmp...76C,%Currie+ "Images of embedded Jovian planet formation at a wide separation around AB Aurigae"
+2022NatAs...6..751C,%Currie+ "Images of embedded Jovian planet formation at a wide separation around AB Aurigae"
 2022JCAP...04..019R,%Roper Pol+ "Polarization of gravitational waves from helical MHD turbulent sources"
 2022ApJ...929..127M,%Mtchedlidze+ "Evolution of primordial magnetic fields during large-scale structure formation"
-2022arXiv220400633C,%Currie+ "Images of Embedded Jovian Planet Formation At A Wide Separation Around AB Aurigae"
+2022NatAs...6..751C,%Currie+ "Images of Embedded Jovian Planet Formation At A Wide Separation Around AB Aurigae"
 2022RSPTA.38010086B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
 2022JFM...934A..37H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
 2022MNRAS.511..732B,%Becerra+ "Evolution of random initial magnetic fields in stably stratified and barotropic stars"
@@ -288,7 +288,7 @@ In \textit{addition}, 137 papers reference it for code comparison or other purpo
 2022ApJ...931L..17K,%Kapyla+ "Solar-like dynamos and rotational scaling of cycles from star-in-a-box simulations"
 2022MNRAS.509.3218K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of interstellar medium gas density and gas turbulence"
 2022MNRAS.509.2249B,%Bhat+ "Saturation of large-scale dynamo in anisotropically forced turbulence"
-2022arXiv220105630R,%Roper Pol+ "The gravitational wave signal from primordial magnetic fields in the Pulsar Timing Array frequency band"
+2022PhRvD.105l3502R,%Roper Pol+ "The gravitational wave signal from primordial magnetic fields in the Pulsar Timing Array frequency band"
 2022MNRAS.509.3660M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas I. Numerical simulation of the nearly Jeans-unstable case"
 2022ParC..11102904P,%Pekkila+ "Scalable communication for high-order stencil computations using CUDA-aware MPI"
 Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolved carbon particle"
@@ -299,19 +299,19 @@ Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolve
 2021MNRAS.508.5538Y,%Yang+Zhu "Streaming instability with multiple dust species - II. Turbulence and dust-gas dynamics at non-linear saturation"
 2021A&A...655A..78K,%Kapyla "Prandtl number dependence of stellar convection: Flow statistics and convective energy transport"
 2022PhRvL.128v1301K,%Kahniashvili+ "Big Bang Nucleosynthesis Limits and Relic Gravitational Waves Detection Prospects"
-2021MNRAS.tmp.2879B,%Bhat "Saturation of large-scale dynamo in anisotropically forced turbulence"
-2021arXiv211101289M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas -- I. Numerical simulation of the nearly..."
+2022MNRAS.509.2249B,%Bhat "Saturation of large-scale dynamo in anisotropically forced turbulence"
+2022MNRAS.509.3660M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas -- I. Numerical simulation of the nearly..."
 2021MNRAS.507.5732Z,%Zhou+Blackman "On the shear-current effect: toward understanding why theories and simulations have mutually and separately ..."
 2021arXiv211014456H,%He+ "Leading-order nonlinear gravitational waves from reheating magnetogeneses"
-2021arXiv211002568B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
-2021MNRAS.tmp.2768K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of ISM gas density and gas turbulence"
+2022RSPTA.38010086B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
+2022MNRAS.509.3218K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of ISM gas density and gas turbulence"
 2021DPS....5340904H,%Hyder+ "Vortex Dynamics at the Jovian Pole"
 2021ApJ...920...26B,%Brandenburg+Sharma "Simulating relic gravitational waves from inflationary magnetogenesis"
 2021ApJ...919L..13W,%Warnecke "Investigating global convective dynamos with mean-field models: full spectrum of turbulent effects required" WO
 2021A&A...654A...3P,%Prabhu+ "Inferring magnetic helicity spectrum in spherical domains: the method and example applications" WO
 2021PhFl...33i5125B,%Brandenburg+Das "Turbulent radiative diffusion and turbulent Newtonian cooling"
 2021A&A...653A..14S,%Schaffer+ "Streaming instability of multiple particle species II -- Numerical convergence with increasing particle number" WO
-2021arXiv210801936M,%Maiti+ "Cosmic ray Transport in Magnetohydrodynamic turbulence" WO
+2022ApJ...926...94M,%Maiti+ "Cosmic ray Transport in Magnetohydrodynamic turbulence" WO
 2022JCAP...04..019R,%Roper Pol+ "Polarization of gravitational waves from helical MHD turbulent sources"
 2021PhRvD.104d3513B,%Brandenburg+ "Can we observe the QCD phase transition-generated gravitational waves through pulsar timing arrays?"
 2021ApJ...922..192B,%Brandenburg+ "Simulations of helical inflationary magnetogenesis and gravitational waves"
@@ -321,7 +321,7 @@ Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolve
 2021JPCom...2b5012O,%Oliveira+ "Chaotic transients and hysteresis in an alpha^2 dynamo model" WO
 2021ApJ...913...92R,%Raettig+ "Pebble Trapping in Vortices: Three-dimensional Simulations" WO
 2021arXiv210508287R,%Roper Pol "Gravitational radiation from MHD turbulence in the early universe" WO
-2021arXiv210501539H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
+2022JFM...934A..37H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
 2021arXiv210307136H,%Haugen+ "Thermophoresis and its effect on particle impaction on a cylinder for low and moderate Reynolds numbers" WO
 2021JCAP...07..015H,%He+ "Spectrum of turbulence-sourced gravitational waves as a constraint on graviton mass"
 2021ApJ...910L..15G,%Gent+ "Small-scale Dynamo in Supernova-driven Interstellar Turbulence" WO
@@ -333,7 +333,7 @@ Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolve
 2021arXiv210211110N,%Navarrete+ "Origin of eclipsing time variations: contributions of different modes of the dynamo-generated magnetic field" WO
 2021A&A...647A..18J,%Jakab+Brandenburg "The effect of a dynamo-generated field on the Parker wind"
 2021ApJ...909..135B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks. I. Spirals" WO
-2021arXiv210101891B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks II: Strong Gas Accretion and Thin Dust Disks" WO
+2021ApJ...909..136B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks II: Strong Gas Accretion and Thin Dust Disks" WO
 2021ApJ...911..110B,%Brandenburg "Relic gravitational waves from the chiral magnetic effect"
 2021MNRAS.501..467Z,%Zhu+ "Streaming instability with multiple dust species - I. Favourable conditions for the linear growth" WO
 2021MNRAS.501.3074B,%Bhat+ "Inverse energy transfer in decaying, three-dimensional, non-helical magnetic turbulence due to magnetic reconnection" WO
@@ -345,7 +345,7 @@ Karchniwy_etal_2022%Karchniwy+ "A numerical study on the combustion of a resolve
 },\item
 \item %YEAR
 41 times in 2020 \citep{
-2020arXiv201206343B,%Barekat+ "Generation of mean flows in rotating anisotropic turbulence: The case of solar near-surface shear layer" WO
+2021A&A...655A..79B,%Barekat+ "Generation of mean flows in rotating anisotropic turbulence: The case of solar near-surface shear layer" WO
 2020DPS....5210301H,%Hyder+ "Vortex Dynamics in the Polar Atmosphere of Jupiter" WO
 2020PhRvD.102b3536B,%Brandenburg+ "Primordial magnetic helicity evolution with homogeneous magnetic field from inflation"
 2020ApJ...898..112P,%Park "Negative Magnetic Diffusivity {\ensuremath{\beta}} Replacing the {\ensuremath{\alpha}} Effect in the Helical Dynamo" WO
@@ -391,7 +391,7 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle" WO
 39 times in 2019 \citep{
 Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 2019arXiv190808781E,%Evirgen+ "MHD supernova explosions -- Large-scale magnetic field effects"
-2019arXiv191101039P,%Park "Negative Magnetic Diffusivity beta replacing alpha effect in Helical Dynamo"
+2020ApJ...898..112P,%Park "Negative Magnetic Diffusivity beta replacing alpha effect in Helical Dynamo"
 2019ApJ...872..132P,%Park "Principle of the Helical and Nonhelical Dynamo and the {\ensuremath{\alpha}} Effect in a Field ... "
 2019arXiv190204172R,%Rudiger+Kapyla+ "Antisolar differential rotation of slowly rotating cool stars"
 2019ESS.....431720G,%Gerbig+ "How scales of streaming and Kelvin-Helmholtz instabilities regulate particle ..."
@@ -967,7 +967,7 @@ The {\sc Pencil Code} has been used for the following research topics
 2023MNRAS.523.1056P,%Pavaskar+ "Magnetic field measurement from the Davis-Chandrasekhar-Fermi method employed with atomic alignment"
 2023ApJ...943..176G,%Gent+ "The small-scale dynamo in a multiphase supernova-driven medium"
 2022MNRAS.513.2136B,%Brandenburg+Ntormousi "Dynamo effect in unstirred self-gravitating turbulence"
-2021arXiv210801936M,%Maiti+ "Cosmic ray Transport in Magnetohydrodynamic turbulence"
+2022ApJ...926...94M,%Maiti+ "Cosmic ray Transport in Magnetohydrodynamic turbulence"
 2021ApJ...910L..15G,%Gent+ "Small-scale Dynamo in Supernova-driven Interstellar Turbulence"
 2021A&A...648A..52L,%Li+Mattsson "Coagulation of inertial particles in supersonic turbulence"
 2020ApJ...896...86C,%Candelaresi+Del Sordo "Stabilizing Effect of Magnetic Helicity on Magnetic Cavities in the Intergalactic Medium
@@ -1023,7 +1023,7 @@ The {\sc Pencil Code} has been used for the following research topics
 2022arXiv221004460G,%Gent+ "The small-scale dynamo in a multiphase supernova-driven medium"
 2023MNRAS.518.6367B,%Brandenburg+ "Dissipative magnetic structures and scales in small-scale dynamos"
 2022JPlPh..88f9002Z,%Zhou+ "Scaling of the Saffman helicity integral in decaying magnetically-dominated turbulence"
-2021MNRAS.tmp.2879B,%Bhat "Saturation of large-scale dynamo in anisotropically forced turbulence"
+2022MNRAS.509.2249B,%Bhat "Saturation of large-scale dynamo in anisotropically forced turbulence"
 2021arXiv210203500P,%Park+Cheoun "Negative Magnetic Diffusivity $\beta$ effect in a Magnetically Dominant System"
 2021MNRAS.503.1290S,%Santos-Lima+ "Diffusion of large-scale magnetic fields by reconnection in MHD turbulence"
 2020ApJ...898..112P,%Park "Negative Magnetic Diffusivity {\ensuremath{\beta}} Replacing the {\ensuremath{\alpha}} Effect in the Helical Dynamo"
@@ -1137,7 +1137,7 @@ XXX
 2022ApJ...933..100B,%Baehr+ "Direct Formation of Planetary Embryos in Self-Gravitating Disks"
 2021MNRAS.508.5538Y,%Yang+Zhu "Streaming instability with multiple dust species - II. Turbulence and dust-gas dynamics at non-linear saturation"
 2021ApJ...913...92R,%Raettig+ "Pebble Trapping in Vortices: Three-dimensional Simulations"
-2021arXiv210101891B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks II: Strong Gas Accretion and Thin Dust Disks"
+2021ApJ...909..136B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks II: Strong Gas Accretion and Thin Dust Disks"
 2021ApJ...909..135B,%Baehr+Zhu "Particle Dynamics in 3D Self-gravitating Disks. I. Spirals"
 2021MNRAS.501..467Z,%Zhu+ "Streaming instability with multiple dust species - I. Favourable conditions for the linear growth"
 2021ApJ...911....9K,%Klahr+Schreiber "Testing the Jeans, Toomre, and Bonnor-Ebert Concepts for Planetesimal Formation: 3D Streaming-instability Simulations of ..."
@@ -1218,12 +1218,12 @@ XXX
 2024NatCo..15.1841K,%Kirchschlager+ "Supernova dust destruction in the magnetized turbulent ISM"
 2023ApJ...942...74S,%Sengupta+Umurhan "Turbulence in particle laden midplane layers of planet forming disks"
 2022JAtS...79.1821L,%Li+ "Fluctuations and growth histories of cloud droplets: superparticle simulations of the collision-..."
-2021MNRAS.tmp.2768K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of ISM gas density and gas turbulence"
-2021arXiv211101289M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas -- I. Numerical simulation of the nearly..."
+2022MNRAS.509.3218K,%Kirchschlager+ "Supernova induced processing of interstellar dust: impact of ISM gas density and gas turbulence"
+2022MNRAS.509.3660M,%Mattsson+Hedvall "Acceleration and clustering of cosmic dust in a gravoturbulent gas -- I. Numerical simulation of the nearly..."
 2021A&A...653A..14S,%Schaffer+ "Streaming instability of multiple particle species II -- Numerical convergence with increasing particle number" WO
-2021arXiv210501539H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
+2022JFM...934A..37H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
 2021arXiv210307136H,%Haugen+ "Thermophoresis and its effect on particle impaction on a cylinder for low and moderate Reynolds numbers"
-2021arXiv211002568B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
+2022RSPTA.38010086B,%Bhatnagar+ "Rate of formation of caustics in heavy particles advected by turbulence"
 2020PhRvE.101c3102B,%Bhatnagar "Statistics of relative velocity for particles settling under gravity in a turbulent flow"
 2020JAtS...77..337L,%Li+ "Condensational and collisional growth of cloud droplets in a turbulent environment"
 2019MNRAS.490.5788M,%Mattsson "Small-scale clustering of nano-dust grains in turbulent interstellar molecular clouds (extended v)"
@@ -1309,7 +1309,7 @@ XXX
 
 \item %s h e a r
 {\em Shear flows} \citep{
-2020arXiv201206343B,%Barekat+ "Generation of mean flows in rotating anisotropic turbulence: The case of solar near-surface shear layer"
+2021A&A...655A..79B,%Barekat+ "Generation of mean flows in rotating anisotropic turbulence: The case of solar near-surface shear layer"
 2015ApJ...806..118S,%Singh & Jingade "Numerical studies of dynamo action in a turbulent shear flow" 
 2014PhPl...21g2126M,%Modestov "Evolution of the magnetic field generated by the Kelvin-Helmholtz instability" 
 2009AN....330..797V,%Vermersch & Brandenburg "Shear-driven magnetic buoyancy oscillations" 
@@ -1400,7 +1400,7 @@ XXX
 2022PhFl...34d5113Y,%Yang+Zhu "Turbulence compressibility reduction with helicity"
 2021A&A...654A...3P,%Prabhu+ "Inferring magnetic helicity spectrum in spherical domains: the method and example applications" WO
 2020ApJ...889...55B,%Brandenburg+Scannapieco "Magnetic Helicity Dissipation and Production in an Ideal MHD Code"
-2019arXiv191101039P,%Park "Negative Magnetic Diffusivity beta replacing alpha effect in Helical Dynamo"
+2020ApJ...898..112P,%Park "Negative Magnetic Diffusivity beta replacing alpha effect in Helical Dynamo"
 2019arXiv190100423P,%Peng+ "Helicity hardens the gas"
 2019A&A...629A..89N,%Nauman+Nattila "Exploring helical dynamos with machine learning"
 2019ApJ...872..132P,%Park "Principle of the Helical and Nonhelical Dynamo and the {\ensuremath{\alpha}} Effect in a Field ... "
@@ -1431,7 +1431,6 @@ XXX
 2013MNRAS.434.2020P,% Park "Influence of initial conditions on the large-scale dynamo growth rate" 
 2014MNRAS.444.3837P,% Park "Influence of small-scale E<SUB>M</SUB> and H<SUB>M</SUB> on the growth of large-scale magnetic field" 
 2013PhRvE..87d3104C,% Candelaresi & Brandenburg "Kinetic helicity needed to drive large-scale dynamos" 
-2013MNRAS.434.2020P,% Park "Influence of initial conditions on large scale dynamo growth rate" 
 2013MNRAS.429.1686D,% Del Sordo Guerrero & Brandenburg "Turbulent dynamos with advective magnetic helicity flux" 
 2013IAUS..294..387B,% Brandenburg "Non-linear and chaotic dynamo regimes" 
 2013JFM...729..309R,% Rempel "Coherent structures and the saturation of a nonlinear dynamo" 
@@ -1665,7 +1664,7 @@ XXX
 2022JFM...952R...1K,%Kapyla+Singh "Turbulent Prandtl number from isotropically forced turbulence"
 2022ApJ...932....8K,%MKapyla+ "Compressible Test-field Method and Its Application to Shear Dynamos"
 2021MNRAS.507.5732Z,%Zhou+Blackman "On the shear-current effect: toward understanding why theories and simulations have mutually and separately ..."
-2021arXiv210501539H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
+2022JFM...934A..37H,%Haugen+ "Spectral characterisation of inertial particle clustering in turbulence"
 2020ApJ...905..179K,%Kapyla "On the Existence of Shear-current Effects in Magnetized Burgulence"
 2020JPlPh..86a9010B,%Brandenburg+Chen "The nature of mean-field generation in three classes of optimal dynamos"
 Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
@@ -1789,7 +1788,7 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 2011arXiv1110.1163T,% Tarjei Jensen Haugen & Babkovskaia "Calculation of the Minimum Ignition Energy based on the ignition delay time" 
 2011PhRvE..83a6304B,% Brandenburg Haugen & Babkovskaia "Turbulent front speed in the Fisher equation: Dependence on Damköhler number" 
 2011JCoPh.230....1B,% Babkovskaia Haugen & Brandenburg "A high-order public domain code for direct numerical simulations of turbulent combustion" 
-2004IJAsB...3..209B,% Brandenburg & Multamaki "How long can left and right handed life forms coexist?"
+2004IJAsB...3..209B% Brandenburg & Multamaki "How long can left and right handed life forms coexist?"
 }.
 
 %G P U
@@ -1866,7 +1865,7 @@ or in comparison with other codes \citep{
 2020ApJ...898...60R,%Rosswog "A simple, entropy-based dissipation trigger for SPH"
 2019LRCA....5....2B,%Beresnyak "MHD turbulence"
 2019JPhCS1336a2012S,%Sapetina+ "The grid codes generation for solving problems of the cosmic plasma hydrodynamics on supercomputers"
-2019arXiv191113093R,%Rosswog+ "The Lagrangian hydrodynamics code MAGMA2"
+2020MNRAS.498.4230R,%Rosswog+ "The Lagrangian hydrodynamics code MAGMA2"
 2019ApJS..244...38M,%Mignone+ "A Particle Module for the PLUTO Code: III -- Dust"
 2019MNRAS.488.5210T,%Tricco+ "The Kelvin-Helmholtz instability and smoothed particle hydrodynamics"
 2019ApJ...879...91J,%J{\'o}hannesson+ "Cosmic-Ray Propagation in Light of the Recent Observation of Geminga"
