current version; message generated automatically on: Linux nl6 (brandenb)

--- a/doc/citations/notes.tex
+++ b/doc/citations/notes.tex
@@ -131,6 +131,15 @@ In \textit{addition}, 137 papers reference it for code comparison or other purpo
 \begin{description}
 \item %YEAR
 38 times in 2025 \citep{
+2025arXiv251026918G,%Ghosh+ "Can galactic magnetic fields diffuse into the voids?"
+2025JApA...46...87S,%Singh+ "Combining local and global magnetohydrodynamic simulation frameworks to understand the evolution of coronal mass ejections"
+2025arXiv251119508M,%Mtchedlidze "Simulated Rotation Measure Sky from Primordial Magnetic Fields"
+2025ApJ...995...39B,%Baehr+ "On the Gravitational Collapse of Small Dust Grains in Self-gravitating Disk Structures"
+2025arXiv251209177G,%Gurgenidze+ "Primordial magnetic field from chiral plasma instability with sourcing"
+2025arXiv251209725E,%Elias-Lopez "Numerical simulations of astrophysical dynamos and applications to giant planets"
+2025arXiv251211973S,%Skalidis+ "Residual energy in weakly compressible turbulence with a mean guide field"
+2025arXiv251217770B,%Brandenburg+ "Magnetic field spreading from stellar and galactic dynamos into the exterior"
+2025arXiv251217885G,%Gent+ "Asymptotic behaviour of galactic small-scale dynamos at modest magnetic Prandtl number"
 2025PhFl...37j5163L,%Lipatnikov+Sabelnikov "A numerical study of velocity-pressure gradient and pressure-dilatation terms in transport equations for subfilter turbulent kinetic energy in premixed flames"
 2025JPlPh..91E...5B,%Brandenburg+Banerjee "Turbulent magnetic decay controlled by two conserved quantities"
 2025arXiv250921141Z,%Zhang+Brandenburg "Resistive Scaling in the Magnetic Helicity-Driven Inverse Cascade"
@@ -1009,6 +1018,8 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item % r e c o n  &  S S d y n
 {\em Small-scale dynamos and reconnection} \citep{
+2025arXiv251211973S,%Skalidis+ "Residual energy in weakly compressible turbulence with a mean guide field"
+2025arXiv251217885G,%Gent+ "Asymptotic behaviour of galactic small-scale dynamos at modest magnetic Prandtl number"
 2025MNRAS.542..884K,%Koshikumo+ "Magnetic flux transport via reconnection diffusion in different sonic regimes of interstellar MHD turbulence"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
 2025ApJ...990..223B,%Brandenburg+Ntormousi "Magnetic Field Amplification during a Turbulent Collapse"
@@ -1051,6 +1062,7 @@ The {\sc Pencil Code} has been used for the following research topics
 
 \item %p r i m o r d i a l,   d e c a y i n g,  c o s m o
 {\em Primordial magnetic fields and decaying turbulence} \citep{
+2025arXiv251119508M,%Mtchedlidze "Simulated Rotation Measure Sky from Primordial Magnetic Fields"
 2025arXiv250921141Z,%Zhang+Brandenburg "Resistive Scaling in the Magnetic Helicity-Driven Inverse Cascade"
 2025A&A...694A..39D,%Dehman+Brandenburg "Reality of Inverse Cascading in Neutron Star Crusts"
 2025PhRvD.111d3541V,%Vachaspati+Brandenburg "Spectra of magnetic fields from electroweak symmetry breaking"
@@ -1119,18 +1131,20 @@ The {\sc Pencil Code} has been used for the following research topics
 }.
 \end{enumerate}
 
-\begin{verbatim}
-XXX
-\end{verbatim}
+%\begin{verbatim}
+%XXX
+%\end{verbatim}
 
 \item
 {\bf Planet formation and inertial particles}
 
 \begin{enumerate}
 
-%d u s t  &  p l a n e t & s t r e a m i n g & PLANERESIMAL
+%d u s t  &  p l a n e t & s t r e a m i n g & PLANETESIMAL
 \item
 {\em Planet formation} \citep{
+2025ApJ...995...39B,%Baehr+ "On the Gravitational Collapse of Small Dust Grains in Self-gravitating Disk Structures"
+2025arXiv251209725E,%Elias-Lopez "Numerical simulations of astrophysical dynamos and applications to giant planets"
 2025MNRAS.539.3421R,%Rice+ "Dust density enhancements and the direct formation of planetary cores in gravitationally unstable discs"
 2025MNRAS.537L..26E,%Eriksson+ "Particle fragmentation inside planet-induced spiral waves"
 2025MNRAS.536.1625S,%Shi+ "Kinetic field theory applied to planetesimal formation I: freely streaming dust particles"
@@ -1327,6 +1341,7 @@ XXX
 \begin{enumerate}
 \item % c o r
 {\em Coronal heating and coronal mass ejections} \citep{
+2025JApA...46...87S,%Singh+ "Combining local and global magnetohydrodynamic simulation frameworks to understand the evolution of coronal mass ejections"
 2025ApJ...989...39S,%Srivastava+ "The Relation between Solar Spicules and Magnetohydrodynamic Shocks"
 2025arXiv250217178K,%Kishore+Singh "Rotational effects on the small-scale dynamo"
 2025ApJ...986..183K,%Kishore+Singh "The spectra of solar magnetic energy and helicity"
@@ -1385,6 +1400,8 @@ XXX
 
 \item %h e l
 {\em Large-scale dynamos, helical turbulence, and catastrophic quenching} \citep{
+2025arXiv251026918G,%Ghosh+ "Can galactic magnetic fields diffuse into the voids?"
+2025arXiv251217770B,%Brandenburg+ "Magnetic field spreading from stellar and galactic dynamos into the exterior"
 2025MNRAS.541.3427S,%Shchutskyi+ "Kinematic dynamos and resolution limits for Smoothed Particle Magnetohydrodynamics"
 2025ApJ...993...22B,%Brandenburg "Magnetorotational instability in a solar mean-field dynamo"
 2025ApJ...984...78B,%Brandenburg+Vishniac "Magnetic helicity fluxes in dynamos from rotating inhomogeneous turbulence"
@@ -1724,6 +1741,7 @@ Peng2019HelicityHT,%Peng+ "Helicity hardens the gas"
 %c h i r a l   M H D  (somewhere here we could also list Hall cascade later)
 \item
 {\em Chiral MHD} \citep{
+2025arXiv251209177G,%Gurgenidze+ "Primordial magnetic field from chiral plasma instability with sourcing"
 2024PhRvD.110d3515S,%Schober+ "Efficiency of dynamos from autonomous generation of chiral asymmetry"
 2024PhRvL.132f5101S,%Schober+ "Chiral Anomaly and Dynamos from Inhomogeneous Chemical Potential Fluctuations"
 2023PhRvD.108f3529B,%Brandenburg "Chiral magnetohydrodynamics with zero total chirality"
@@ -1810,6 +1828,8 @@ Zhang_etal_2020comb,%Zhang+ "Drag force for a burning particle"
 The {\sc Pencil Code} has been quoted in other papers either for
 detailed code comparison, in connection with related work,
 or in comparison with other codes \citep{
+2025A&A...703A.298N,%Navarro "Modeling solar atmosphere dynamics with MAGEC"
+2025arXiv251112195B,%Buchner "High-impact Scientific Software in Astronomy and its creators"
 2025arXiv251012203F,%Federrath+Offner "Computational advances and challenges in simulations of turbulence and star formation"
 2025ApJS..280...48L,%Luo+Fan "The Yin{\textendash}Yang Magnetic Flux Eruption (Yin{\textendash}Yang MFE) Code: A Global Corona Magnetohydrodynamic Code with the Yin{\textendash}Yang Grid"
 2025arXiv250906699P,%Pons+ "Magnetic, thermal and rotational evolution of isolated neutron stars"
