--- a/doc/citations/ref.bib
+++ b/doc/citations/ref.bib
@@ -16066,4 +16066,192 @@ archivePrefix = {arXiv},
     pcsection = {Turbulent combustion, front propagation, radiation \& ionization}
 }
 
+@ARTICLE{2025arXiv251217885G,
+       author = {{Gent}, Frederick A. and {Mac Low}, Mordecai-Mark and {Korpi-Lagg}, Maarit J. and {Puro}, Touko and {Reinhardt}, Matthias},
+        title = "{Asymptotic behaviour of galactic small-scale dynamos at modest magnetic Prandtl number}",
+      journal = {arXiv e-prints},
+     keywords = {Astrophysics of Galaxies, Distributed, Parallel, and Cluster Computing},
+         year = 2025,
+        month = dec,
+          eid = {arXiv:2512.17885},
+        pages = {arXiv:2512.17885},
+          doi = {10.48550/arXiv.2512.17885},
+archivePrefix = {arXiv},
+       eprint = {2512.17885},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251217885G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251217770B,
+       author = {{Brandenburg}, Axel and {Ghosh}, Oindrila and {Vazza}, Franco and {Neronov}, Andrii},
+        title = "{Magnetic field spreading from stellar and galactic dynamos into the exterior}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Astrophysical Phenomena, Cosmology and Nongalactic Astrophysics, Astrophysics of Galaxies},
+         year = 2025,
+        month = dec,
+          eid = {arXiv:2512.17770},
+        pages = {arXiv:2512.17770},
+          doi = {10.48550/arXiv.2512.17770},
+archivePrefix = {arXiv},
+       eprint = {2512.17770},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251217770B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251211973S,
+       author = {{Skalidis}, R. and {Tritsis}, A. and {Beattie}, J.~R. and {Hopkins}, P.~F.},
+        title = "{Residual energy in weakly compressible turbulence with a mean guide field}",
+      journal = {arXiv e-prints},
+     keywords = {Solar and Stellar Astrophysics, Fluid Dynamics, Plasma Physics},
+         year = 2025,
+        month = dec,
+          eid = {arXiv:2512.11973},
+        pages = {arXiv:2512.11973},
+          doi = {10.48550/arXiv.2512.11973},
+archivePrefix = {arXiv},
+       eprint = {2512.11973},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251211973S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251209725E,
+       author = {{Elias-L{\'o}pez}, Albert},
+        title = "{Numerical simulations of astrophysical dynamos and applications to giant planets}",
+      journal = {arXiv e-prints},
+     keywords = {Earth and Planetary Astrophysics, Astrophysics of Galaxies, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = dec,
+          eid = {arXiv:2512.09725},
+        pages = {arXiv:2512.09725},
+          doi = {10.48550/arXiv.2512.09725},
+archivePrefix = {arXiv},
+       eprint = {2512.09725},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251209725E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251209177G,
+       author = {{Gurgenidze}, Murman and {Long}, Andrew J. and {Roper Pol}, Alberto and {Brandenburg}, Axel and {Kahniashvili}, Tina},
+        title = "{Primordial magnetic field from chiral plasma instability with sourcing}",
+      journal = {arXiv e-prints},
+     keywords = {High Energy Physics - Phenomenology, Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = dec,
+          eid = {arXiv:2512.09177},
+        pages = {arXiv:2512.09177},
+          doi = {10.48550/arXiv.2512.09177},
+archivePrefix = {arXiv},
+       eprint = {2512.09177},
+ primaryClass = {hep-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251209177G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025ApJ...995...39B,
+       author = {{Baehr}, Hans and {Rice}, Ken and {Yang}, Chao-Chin and {Hall}, Cassandra},
+        title = "{On the Gravitational Collapse of Small Dust Grains in Self-gravitating Disk Structures}",
+      journal = {\apj},
+     keywords = {Protoplanetary disks, Planet formation, Planetesimals, Hydrodynamical simulations, 1300, 1241, 1259, 767, Earth and Planetary Astrophysics},
+         year = 2025,
+        month = dec,
+       volume = {995},
+       number = {1},
+          eid = {39},
+        pages = {39},
+          doi = {10.3847/1538-4357/ae1a73},
+archivePrefix = {arXiv},
+       eprint = {2511.00513},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025ApJ...995...39B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251119508M,
+       author = {{Mtchedlidze}, Salome and {Vazza}, Franco and {Du}, Xiaolong and {Carretti}, Ettore and {Stuardi}, Chiara and {O'Sullivan}, Shane Patrick},
+        title = "{Simulated Rotation Measure Sky from Primordial Magnetic Fields}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics},
+         year = 2025,
+        month = nov,
+          eid = {arXiv:2511.19508},
+        pages = {arXiv:2511.19508},
+          doi = {10.48550/arXiv.2511.19508},
+archivePrefix = {arXiv},
+       eprint = {2511.19508},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251119508M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251112195B,
+       author = {{Buchner}, Johannes},
+        title = "{High-impact Scientific Software in Astronomy and its creators}",
+      journal = {arXiv e-prints},
+     keywords = {Instrumentation and Methods for Astrophysics, Physics and Society},
+         year = 2025,
+        month = nov,
+          eid = {arXiv:2511.12195},
+        pages = {arXiv:2511.12195},
+          doi = {10.48550/arXiv.2511.12195},
+archivePrefix = {arXiv},
+       eprint = {2511.12195},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251112195B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025JApA...46...87S,
+       author = {{Singh}, Talwinder and {Sankar Maity}, Samriddhi and {Chatterjee}, Piyali and {Pogorelov}, Nikolai},
+        title = "{Combining local and global magnetohydrodynamic simulation frameworks to understand the evolution of coronal mass ejections}",
+      journal = {Journal of Astrophysics and Astronomy},
+     keywords = {Coronal mass ejection, flux rope, magnetohydrodynamics},
+         year = 2025,
+        month = nov,
+       volume = {46},
+       number = {2},
+          eid = {87},
+        pages = {87},
+          doi = {10.1007/s12036-025-10114-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025JApA...46...87S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025A&A...703A.298N,
+       author = {{Navarro}, A. and {Khomenko}, E. and {Vitas}, N. and {Felipe}, T.},
+        title = "{Modeling solar atmosphere dynamics with MAGEC}",
+      journal = {\aap},
+     keywords = {conduction, convection, magnetohydrodynamics (MHD), methods: numerical, Sun: atmosphere, Sun: corona, Solar and Stellar Astrophysics},
+         year = 2025,
+        month = nov,
+       volume = {703},
+          eid = {A298},
+        pages = {A298},
+          doi = {10.1051/0004-6361/202556221},
+archivePrefix = {arXiv},
+       eprint = {2511.05380},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025A&A...703A.298N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2025arXiv251026918G,
+       author = {{Ghosh}, Oindrila and {Brandenburg}, Axel and {Caprini}, Chiara and {Neronov}, Andrii and {Vazza}, Franco},
+        title = "{Can galactic magnetic fields diffuse into the voids?}",
+      journal = {arXiv e-prints},
+     keywords = {Cosmology and Nongalactic Astrophysics, Astrophysics of Galaxies, High Energy Astrophysical Phenomena},
+         year = 2025,
+        month = oct,
+          eid = {arXiv:2510.26918},
+        pages = {arXiv:2510.26918},
+          doi = {10.48550/arXiv.2510.26918},
+archivePrefix = {arXiv},
+       eprint = {2510.26918},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2025arXiv251026918G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
